@@ -36,9 +36,9 @@
             "rct2.scenery_small.trf2",
             "fidwell.scenery_small.trf2",
             "rct2.scenery_small.tel",
-            "$DAT:00000002|GWTREL  ",
+            "fidwell.scenery_small.tel",
             "rct2.scenery_small.tap",
-            "$DAT:00000002|GWTRAP  ",
+            "fidwell.scenery_small.tap",
             "rct2.scenery_small.tsp",
             "$DAT:00000002|GWTRSP  ",
             "rct2.scenery_small.tmzp",
