@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tap",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRAP  |1D619F7B",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 18,
+        "removalPrice": 10,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 80,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -78 },
+      { "path": "images/1.png", "x": -29, "y": -80 },
+      { "path": "images/2.png", "x": -31, "y": -78 },
+      { "path": "images/3.png", "x": -32, "y": -74 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Aleppo Pine Tree",
+            "fr-FR": "Pin d’Alep",
+            "de-DE": "Aleppokiefer",
+            "es-ES": "Pino de Aleppo",
+            "it-IT": "Pino di Aleppo",
+            "nl-NL": "Aleppoden",
+            "sv-SE": "Aleppo-tall",
+            "ko-KR": "알레포 파인 나무",
+            "zh-CN": "松树",
+            "zh-TW": "松樹",
+            "pt-BR": "Árvore Pinheiro-de-Aleppo",
+            "cs-CZ": "Borovice",
+            "ja-JP": "アレッポ松",
+            "pl-PL": "Sosna z Aleppo",
+            "ru-RU": "Сосна",
+            "eo-ZZ": "Alepo-Pinoarbo",
+            "ca-ES": "Pi blanc",
+            "fi-FI": "Alepponmänty"
+        }
+    }
+}
