@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tel",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTREL  |84CF3F00",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 26,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 116,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -116 },
+      { "path": "images/1.png", "x": -32, "y": -108 },
+      { "path": "images/2.png", "x": -29, "y": -116 },
+      { "path": "images/3.png", "x": -29, "y": -106 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "European Larch Tree",
+            "fr-FR": "Mélèze",
+            "de-DE": "Europäische Lärche",
+            "es-ES": "Larch europeo",
+            "it-IT": "Larice europeo",
+            "nl-NL": "Europese lariks",
+            "sv-SE": "Europeiskt lärkträd",
+            "ko-KR": "유럽 낙엽송",
+            "zh-CN": "欧洲落叶松树",
+            "zh-TW": "歐洲落葉松樹",
+            "pt-BR": "Árvore Larício-Europeu",
+            "cs-CZ": "Modřín",
+            "ja-JP": "ヨーロッパカラマツ",
+            "pl-PL": "Europejski modrzew",
+            "ru-RU": "Лиственница",
+            "eo-ZZ": "Eŭropa Larikoarbo",
+            "ca-ES": "Cedre d’olor",
+            "fi-FI": "Euroopanlehtikuusi"
+        }
+    }
+}
